.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0rc1 - Unreleased
-------------------

- No longer mention `textile` as a supported markup style. We don't ship with
  the required Python packages by default. This closes
  http://dev.plone.org/plone/ticket/10690.
  [hannosch]

- Fix the table of contents generation script to include h1 tags from the
  content body. Fixes http://dev.plone.org/plone/ticket/10755
  [davisagli]

- Update `plone-upgrade.pt` to explicitly check if a Plone instance has
  been downgraded since the database was created. This fixes:
  http://dev.plone.org/plone/ticket/10220
  Thanks to davidblewett for the patch.
  [claytron, davisagli]

- Update license to GPL version 2 only.
  [hannosch]

- Use Unicode characters instead of HTML entities in the default front page
  text. This closes http://dev.plone.org/plone/ticket/10084.
  [hannosch]

- Replace the `manage_zmi_logout` link and page with a nicer Plone specific
  implementation.
  [hannosch]

- Fixed the visual appearance of the `logged_out` page.
  [hannosch]

- Stop issuing deprecation warnings about action icons in our default install.
  [hannosch]

- Silence the ISO8601 warning until we fixed all of Plone Core. This refs
  http://dev.plone.org/plone/ticket/10322.
  [hannosch]

- Avoid deprecation warning in sendmail patch and require at least Zope 2.12.9.
  [hannosch]

- Removed long unused ``ie5fixes.js``. This refs
  http://dev.plone.org/plone/ticket/10287.
  [hannosch]

- Be a bit less noisy in GenericSetup handlers and don't log a
  ``Nothing to import`` message for our own handlers.
  [hannosch]

- Fix broken userid/login name in the password reset code. Fixes
  http://dev.plone.org/plone/ticket/10767
  [wichert]

4.0b5 - 2010-07-07
------------------

- Don't show the site's logo on the upgrade screen. Trying to render it can